--- a/index.css
+++ b/index.css
@@ -430,7 +430,8 @@ input{
     font-family: 'UbuBold';
 }
 /* SERVIÇOS OPCIONAIS COMEÇO*/
-.displayServiceOpcional{
+
+.displayServiceOpcionalUM, .displayServiceOpcionalDOIS, .displayServiceOpcionalTRES{
     font-family: 'UbuMed';
     padding: 10px 10px;
     display: flex;
@@ -441,10 +442,10 @@ input{
 .displayDetalhesOpc{
 
 }
-.tituloDisplayOpc{
+.tituloDisplayOpcUM, .tituloDisplayOpcDOIS, .tituloDisplayOpcTRES {
     color: var(--CoolGray);
 }
-.valorOpc{
+.valorOpcUM, .valorOpcDOIS, .valorOpcTRES{
     color: var(--MarineBlue);
     font-family: 'UbuMed';
 }
@@ -500,3 +501,18 @@ input{
 }
 
 /* STEP 4 FINAL */
+.agradecimento{
+    display: none;
+    flex-direction: column;
+    align-items: center;
+}
+.agradecimento > img{
+    width: 80px;
+    margin: 5px;
+}
+.agradecimento > p{
+    padding: 5px;
+    color: var(--CoolGray);
+    width: 450px;
+    text-align: center;
+}
