--- a/index.css
+++ b/index.css
@@ -204,6 +204,7 @@ label{
     color: var(--CoolGray);
 }
 .plano{
+    cursor: pointer;
     padding: 5px 0px 5px 10px;
     display: flex;
     width: 140px;
